# auction_draft_GUI

./: install.sh  pyproject.toml  run.py
designer/: mainwindow.ui
docs/: DEVELOPMENT_ROADMAP.md  NEW_ROADMAP.md  PROJECT_STACK.md  agent_based_forecasting.md  auction_forecasting.md
package/: __main__.py  mainwindow.py
package/analysis/: opportunity_cost.py  pricing.py
package/core/: README.md  analysis.py
package/cpp_core/: .clang-tidy  CMakeLists.txt
package/cpp_core/include/cpp_core/: agent.hpp  auction.hpp  draft_state.hpp  market.hpp  player.hpp  projection.hpp  simulator.hpp
package/cpp_core/src/: agent.cpp  auction.cpp  bindings.cpp  simulator.cpp
package/cpp_core/src/test/: hello.cpp
package/data/: cache.py  repositories.py
package/domain/: models.py
package/optimization/: team_optimizer.py
package/plotting/: palettes.py
package/services/: README.md  draft_state_manager.py  draft_sync.py  forecast_adapter.py  league.py  players.py  projection_adapter.py  sleeper.py
package/services/projections/: __init__.py  fantasypros.py
package/simulation_core/: CMakeLists.txt  README.md
package/simulation_core/src/: bindings.cpp
package/ui/: mainwindow_ui.py
tests/: test_forecast_core.py
