[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.1"]
build-backend = "scikit_build_core.build"

[project]
name = "auction-draft-tool"
version = "2.0.0"
description = "An agent-based auction draft tool with a high-performance C++ core."
requires-python = ">=3.12"

dependencies = ["nanobind", "pyqt5", "matplotlib", "numpy", "pandas", "ortools"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
cmake.source-dir = "package/cpp_core"
wheel.packages = ["package"]
cmake.args = ["-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]

[tool.cibuildwheel]
build-verbosity = 1
test-command = "pytest {project}/tests"
test-requires = "pytest"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"